# Instant-Case-Study

./: .gitignore  Dockerfile  package-lock.json  pyproject.toml  railway.toml
api/: .env.example  db.py  main.py  requirements.txt  schema.sql  worker.py
api/routes/: auth.py  jobs.py
instant_case_study/: generator.py  main.py  models.py  parser.py  renderer.py
instant_case_study/templates/: case_study.html.j2  linkedin_post.html.j2
web/: .env.example  middleware.ts  package-lock.json  package.json  railway.toml
web/app/: layout.tsx
web/app/api/[...path]/: route.ts
web/app/dashboard/: page.tsx
web/app/sign-in/[[...sign-in]]/: page.tsx
web/components/: DownloadButtons.tsx  GenerateForm.tsx  JobCard.tsx  JobList.tsx
web/lib/: api.ts
